--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+streamlit>=1.24.0
 pandas>=1.3.0
 numpy>=1.19.0
 scikit-learn>=0.24.0
@@ -6,5 +7,9 @@ lightgbm>=3.2.0
 catboost>=0.26.0
 optuna>=2.8.0
 joblib>=1.0.0
+seaborn>=0.12.0
+matplotlib>=3.4.0
+plotly>=5.3.0
 jupyter>=1.0.0
 notebook>=6.4.0
+pillow>=8.3.0
